log
Thu 25 Apr 2024 07:26:45 PM UTC: 
 tests:  0|6
total_score: 0/70
2351cf2
Thu 25 Apr 2024 09:14:59 PM UTC: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:7: error: array subscript ‘HashMap {aka struct HashMap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   55 |   mapa->capacity = capacity;
      |       ^~
hashmap.c:54:30: note: referencing an object of size 8 allocated by ‘malloc’
   54 |   HashMap* mapa = (HashMap*) malloc(sizeof(HashMap*));
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~
hashmap.c:56:7: error: array subscript ‘HashMap {aka struct HashMap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   56 |   mapa->buckets = (Pair**) calloc(mapa->capacity,sizeof(Pair*));
      |       ^~
hashmap.c:54:30: note: referencing an object of size 8 allocated by ‘malloc’
   54 |   HashMap* mapa = (HashMap*) malloc(sizeof(HashMap*));
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~
hashmap.c:57:7: error: array subscript ‘HashMap {aka struct HashMap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   57 |   mapa->size = 0;
      |       ^~
hashmap.c:54:30: note: referencing an object of size 8 allocated by ‘malloc’
   54 |   HashMap* mapa = (HashMap*) malloc(sizeof(HashMap*));
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c2c0ef0
Thu 25 Apr 2024 09:15:35 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
c33ec7e
Thu 25 Apr 2024 09:16:11 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
b3c0a73
Thu 25 Apr 2024 09:17:33 PM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
efde6e5
Thu 25 Apr 2024 09:25:05 PM UTC: 
 hashmap.c | 58 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 56 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘get_valid_location’:
hashmap.c:60:66: error: expected expression before ‘||’ token
   60 |       if(map->buckets[loc] == NULL || map->buckets[loc]->key ==  || map->buckets[loc]->key == key)
      |                                                                  ^~
Compilation failed
1f21da8
Thu 25 Apr 2024 09:25:23 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
948b57c
Thu 25 Apr 2024 09:30:29 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
99c5c3b
Thu 25 Apr 2024 09:35:07 PM UTC: 
 hashmap.c | 45 ++++++++++++++++++---------------------------
 1 file changed, 18 insertions(+), 27 deletions(-)
 tests:  2|4
total_score: 20/70
0dba3eb
Thu 25 Apr 2024 09:36:04 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
99f26a3
Thu 25 Apr 2024 09:44:49 PM UTC: 
 hashmap.c | 16 +++++++++++-----
 1 file changed, 11 insertions(+), 5 deletions(-)
 tests:  6|3
total_score: 40/70
3d2f7d2
Thu 25 Apr 2024 09:47:24 PM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  7|3
total_score: 40/70
e2070e7
